# sgi-api-core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LEEME.md  LICENSE  README  deploy.sh  docker-compose.yaml  pyproject.toml
data/db/base/13756/: 2619
data/db/global/: 1260  pg_control
data/db/pg_stat/: global.stat
env_files/: DB.env  DJANGO_CONFIG.env
mock/: materias_primas.json  proveedores.json  unidades.json
scripts/: deploy.sh  set_credentials.sh
src/api_core/: asgi.py  settings.py  urls.py  wsgi.py
src/api_core/settings/: base.py  dev.py  prod.py
src/authentication/api/: routers.py  serializers.py  viewsets.py
src/materias_primas/: apps.py  models.py
src/materias_primas/api/: routers.py  serializers.py  viewsets.py
src/proveedores/: admin.py  models.py
src/proveedores/api/: routers.py  serializers.py  viewsets.py
